--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empowering Project </title>
+    <title>Login Panel Empowering</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/main.css">
 </head>
-<body>
-    
+<body class="bg-gray-100">
+    <!-- Navigation Bar -->
+    <!-- <nav class="bg-blue-600 p-4">
+        <div class="container mx-auto flex justify-between items-center">
+            <a href="#" class="text-white text-lg font-bold">MyApp</a>
+            <div>
+                <a href="#" class="text-white px-3">Home</a>
+                <a href="#" class="text-white px-3">About</a>
+                <a href="#" class="text-white px-3">Contact</a>
+            </div>
+        </div>
+    </nav> -->
+
+    <!-- Login Panel -->
+    <div class="flex items-center justify-center h-screen">
+        <div class="w-full max-w-md bg-white p-8 rounded-lg shadow-lg">
+            <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
+            <form>
+                <div class="mb-4">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+                        Username
+                    </label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="userEmail" type="text" placeholder="Enter your Email">
+                </div>
+                <div class="mb-6">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+                        Password
+                    </label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="userPassword" type="password" placeholder="Enter your password">
+                </div>
+                <div class="flex items-center justify-between">
+                    <button id="btnSubmit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                        Sign In
+                    </button>
+                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
+                        Forgot Password?
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-blue-600 p-4">
+        <div class="container mx-auto text-center text-white">
+            &copy; 2024 MyApp. All rights reserved.
+        </div>
+    </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
+
