--- a/homePage.html
+++ b/homePage.html
@@ -15,7 +15,7 @@
         <h2 class="text-2xl font-bold mb-6">Simple Online Quiz System</h2>
         <ul>
             <li class="mb-4"><a href="#" class="hover:underline">Home</a></li>
-            <li class="mb-4"><a href="#" class="hover:underline">Faculty List</a></li>
+            <li id="factulyList" class="mb-4"><a href="#" class="hover:underline">Faculty List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Student List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Quiz List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Quiz Records</a></li>
@@ -44,5 +44,6 @@
         </div>
     </div>
 </div>
+<script src="js/addFactuly.js"></script>
 </body>
 </html>
