--- a/factuly.html
+++ b/factuly.html
@@ -37,7 +37,7 @@
                             <input type="password" id="password" name="password" class="block w-full px-3 py-2 mt-1 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
                         <div class="flex justify-end">
-                            <button type="submit" class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">Save</button>
+                            <button id="saveFactuly" type="submit" class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">Save</button>
                         </div>
                     </form>
                 </div>
@@ -46,6 +46,7 @@
     </div>
 
      <script src="js/addFactuly.js"></script>
+     <script src="js/dataFactuly.js"></script>
      <script src="js/dataFactuly.js"></script>
 </body>
 </html>
