--- a/factuly.html
+++ b/factuly.html
@@ -47,6 +47,6 @@
 
      <script src="js/addFactuly.js"></script>
      <script src="js/dataFactuly.js"></script>
-     <script src="js/dataFactuly.js"></script>
+     <script src="js/checkStudent.js"></script>
 </body>
 </html>
