--- a/homePage.html
+++ b/homePage.html
@@ -16,7 +16,7 @@
         <ul>
             <li class="mb-4"><a href="#" class="hover:underline">Home</a></li>
             <li id="factulyList" class="mb-4"><a href="#" class="hover:underline">Faculty List</a></li>
-            <li id="studentList" class="mb-4"><a href="#" class="hover:underline">Student List</a></li>
+            <li class="mb-4"><a href="#" class="hover:underline">Student List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Quiz List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Quiz Records</a></li>
         </ul>
@@ -46,5 +46,7 @@
 </div>
 <script src="js/addFactuly.js"></script>
 <script src="js/checkStudent.js"></script>
+<script src="js/quizApp.js"></script>
+
 </body>
 </html>
