--- a/studentList.html
+++ b/studentList.html
@@ -12,7 +12,7 @@
             <nav class="flex flex-col p-4">
                 <a href="#" class="py-2 text-gray-600 hover:bg-blue-500 hover:text-white rounded">Home</a>
                 <a href="#" class="py-2 text-gray-600 hover:bg-blue-500 hover:text-white rounded">Student List</a>
-                <a href="#" class="py-2 text-gray-600 hover:bg-blue-500 hover:text-white rounded">Quiz List</a>
+                <a id="quizItem" href="#" class="py-2 text-gray-600 hover:bg-blue-500 hover:text-white rounded">Quiz List</a>
                 <a href="#" class="py-2 text-gray-600 hover:bg-blue-500 hover:text-white rounded">Quiz Records</a>
             </nav>
         </aside>
@@ -82,7 +82,7 @@
                             <input type="text" id="subject" name="subject" class="block w-full px-3 py-2 mt-1 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
                         <div class="flex justify-end">
-                            <button type="submit" class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">Save</button>
+                            <button id="quizList" type="submit" class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">Save</button>
                         </div>
                     </form>
                 </div>
@@ -90,5 +90,7 @@
         </div>
     </div>
     <script src="js/checkStudent.js"></script>
+    <script src="js/quizApp.js"></script>
+    
 </body>
 </html>
