--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Footer -->
     <footer class="bg-blue-600 p-4">
         <div class="container mx-auto text-center text-white">
-            &copy; 2024 MyApp. All rights reserved.
+            Software Development Life Cycle (SDLC)(DIU)
         </div>
     </footer>
     <script src="js/app.js"></script>
