--- a/homePage.html
+++ b/homePage.html
@@ -17,8 +17,9 @@
             <li class="mb-4"><a href="#" class="hover:underline">Home</a></li>
             <li id="factulyList" class="mb-4"><a href="#" class="hover:underline">Faculty List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Student List</a></li>
-            <li class="mb-4"><a href="#" class="hover:underline">Quiz List</a></li>
+            <li id="checkQuiz" class="mb-4"><a href="#" class="hover:underline">Quiz List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Quiz Records</a></li>
+            <li class="mb-4"><a href="#" class="hover:underline">Delate Quiz</a></li>
         </ul>
     </div>
     <!-- Main Content -->
@@ -47,6 +48,6 @@
 <script src="js/addFactuly.js"></script>
 <script src="js/checkStudent.js"></script>
 <script src="js/quizApp.js"></script>
-
+<script src="js/checkQuizList.js"></script>
 </body>
 </html>
