--- a/homePage.html
+++ b/homePage.html
@@ -18,8 +18,8 @@
             <li id="factulyList" class="mb-4"><a href="#" class="hover:underline">Faculty List</a></li>
             <li class="mb-4"><a href="#" class="hover:underline">Student List</a></li>
             <li id="checkQuiz" class="mb-4"><a href="#" class="hover:underline">Quiz List</a></li>
-            <li class="mb-4"><a href="#" class="hover:underline">Quiz Records</a></li>
-            <li class="mb-4"><a href="#" class="hover:underline">Delate Quiz</a></li>
+            <li id="recordQuiz" class="mb-4"><a href="#" class="hover:underline">Quiz Records</a></li>
+            <li id="delateQuiz" class="mb-4"><a href="#" class="hover:underline">Delate Quiz</a></li>
         </ul>
     </div>
     <!-- Main Content -->
@@ -49,5 +49,7 @@
 <script src="js/checkStudent.js"></script>
 <script src="js/quizApp.js"></script>
 <script src="js/checkQuizList.js"></script>
+<script src="js/quizRecordList.js"></script>
+<script src="js/delateQuiz.js"></script>
 </body>
 </html>
