--- a/homePage.html
+++ b/homePage.html
@@ -12,7 +12,7 @@
 <div class="flex">
     <!-- Sidebar -->
     <div class="w-1/4 bg-blue-600 text-white h-screen p-4">
-        <h2 class="text-2xl font-bold mb-6">Simple Online Quiz System</h2>
+        <h2 class="text-2xl font-bold mb-6">Empowering Learning Through Online Quizzing</h2>
         <ul>
             <li class="mb-4"><a href="#" class="hover:underline">Home</a></li>
             <li id="factulyList" class="mb-4"><a href="#" class="hover:underline">Faculty List</a></li>
