--- a/factuly.html
+++ b/factuly.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Faculty</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/main.css">
+    
 </head>
 <body>
-    <div class="flex items-center justify-center min-h-screen bg-gray-100">
-        <button id="openModalBtn" class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">Add Faculty</button>
+    <div class="flex items-center justify-center min-h-screen">
+        <button id="openModalBtn" class="px-8 py-12 font-semibold text-white bg-blue-500 rounded hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">
+            Add Faculty
+        </button>
+        
+        <!-- <button id="openModalBtn" class="px-8 py-122 font-semibold text-white bg-blue-500 rounded">Add Faculty</button> -->
     </div>
 
     <div id="modal" class="fixed inset-0 z-50 hidden overflow-y-auto bg-black bg-opacity-50">
