--- a/checkFactuly.html
+++ b/checkFactuly.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faculty List</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
     <div class="flex min-h-screen bg-gray-100">
