--- a/quizRecord.html
+++ b/quizRecord.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Record</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body class="bg-blue-100">
     <div class="container mx-auto p-4">
