--- a/delateQuiz.html
+++ b/delateQuiz.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-blue-100">
     <div class="container mx-auto p-4">
-        <h1 class="text-4xl font-bold text-center mb-4">Quiz List</h1>
+        <h1 class="text-4xl font-bold text-center mb-4">Delete Quiz List</h1>
         <div class="max-w-6xl mx-auto bg-white p-6 rounded-lg shadow-md">
             <div class="flex justify-between items-center mb-4">
                 <div class="flex space-x-4">
@@ -23,7 +23,7 @@
                     <span class="text-gray-700">entries</span>
                 </div>
                 <input type="text" id="search" class="border rounded p-2" placeholder="Search">
-                <button class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">+ Add New</button>
+                <button id="addNewButton" class="px-4 py-2 font-semibold text-white bg-blue-500 rounded">+ Add New</button>
             </div>
             <table class="min-w-full bg-white" id="quizListTable">
                 <thead>
@@ -54,4 +54,3 @@
     <script src="js/delateQuizList.js"></script>
 </body>
 </html>
-
